--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ form textarea{
   font-size: 30px;
 }
 
+form button{
+
+  margin-top: 50px;
+  font-size: 20px;
+}
+
 .wrapper{
   margin-bottom:80px;
   margin-top: 50px;
